Disable jdk 18 preview features.